# my_net

./: main.py  pyproject.toml
data/: market_prices.csv  price_volume.csv  product_prices.csv  sales_data.csv  synthetic_data.csv
models/: activation.py  loss_function.py  net.py  optimizer.py
