[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["git-Joaquin-Gael <guzmanantonio867@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.16.0"
numpy = "^2.1.3"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
